--- a/src/component/Header/_header.scss
+++ b/src/component/Header/_header.scss
@@ -9,5 +9,23 @@
     }
     &__shoppingCart {
       float: right;
+
+      a {
+        position: relative;
+        display: block;
+        width: 100%;
+      }
+
+      span {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        padding-top: 10px;
+        color: black;
+        font-weight: bold;
+      }
     }
 }
